--- a/src/css/pages/Settings.scss
+++ b/src/css/pages/Settings.scss
@@ -12,7 +12,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
     border-radius: 20px;
 }
 
@@ -73,9 +73,57 @@
     margin-top: 10px;
 }
 
+.Settings_Category {
+    background-color: var(--background-primary-color);
+    padding: 5px 10px 5px 10px;
+
+    border-radius: 5px;
+
+    span {
+        width: 100%;
+
+        font-size: 15px;
+        color: var(--text-primary-color);
+    }
+}
+
+.Settings_Category_Content {
+    margin-top: 15px;
+
+    display: flex;
+    flex-direction: column;
+
+    gap: 20px;
+}
+
+.Settings_Color_Input {
+    padding: 2px 5px 2px 5px;
+    color: var(--text-primary-color);
+    background-color: var(--background-secondary-color);
+
+    border: none;
+
+    &:active {
+        border: none;
+    }
+
+    &:focus {
+        outline: none;
+    }
+}
+
+.Settings_Color_Picker {
+    position: absolute;
+    margin: 5px 0 0 0;
+}
+
+.Settings_Field_color {
+    display: flex;
+    flex-direction: column;
+}
+
 @media screen and (max-width: 1800px) {
     .Settings {
         width: 90%;
     }
 }
-
