(feat) Change the background & Improve color palette changing

--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -328,3 +328,9 @@ body {
 .Tooltip {
     z-index: 1000;
 }
+
+.App {
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
